# mpc-mpnet-py

./: .gitignore  .gitmodules  BoxPlot.ipynb  Quadrotor.ipynb  Quadrotor_sst.ipynb  README.md  VisualizeCartpole-Copy1.ipynb  VisualizeCartpole-SMP.ipynb  VisualizeCartpole.ipynb  VisualizePlanner.ipynb  VisualizeQuadrotorNetwork.ipynb  Visualize_tracker.ipynb  Visualize_tracker_batch-Copy1.ipynb  Visualize_tracker_batch.ipynb  benchmark.py  benchmark_cpp.py  benchmark_cpp_batch.py  benchmark_cpp_mpc_sst.py  benchmark_cpp_smp.py  benchmark_data.py  box_plot_results.ipynb  mpc_mpnet_planner.py  test_mpc.ipynb  test_mpc_cuda.py  test_mpc_mpnet.ipynb  test_mpcmpnet.ipynb  test_sst_wrapper.ipynb  test_step.py
benchmarks/: benchmark.py  benchmark_cpp_batch.py
data_gen/: PostProcessing.ipynb  data_generation.py  data_generation_gen.py  datagen_quadrotor_obs_batch1.sh  datagen_quadrotor_obs_generalize.sh  monitor.py  quadrotor_obs_gen.py  quadrotor_sg_gen.py  run.sh
mpc/: cem.py  cem_mpc.py  cem_mpc_teb.py  cem_teb.py
mpnet/: ValidateCostNet.ipynb  ValidateMPNet_cost.ipynb  ValidateMPNet_norm.ipynb  export.bash  export_cpp.py  normalizer.py  train.py  train_c2g_obs.py  train_control.py  train_costs.py  train_costs_transit.py  train_mpnet.py  train_vae.py
mpnet/cpp/: CMakeLists.txt
mpnet/cpp/src/: test_cpp.cpp
params/: cpp_default.py  cpp_dst_c2g.py  cpp_dst_cost.py  cpp_dst_default.py  cpp_dst_default_2.py  cpp_dst_gr2_n0_5_d0_1_s128_e8.py  cpp_dst_gr2_n1_d0_1_s128_e8.py  cpp_dst_refine_1e-1.py  cpp_dst_refine_5e-2.py  sst_step5_s1024_e32.py  step5_s1024_e32.py  (+1 more)
(+219 files in other folders)
